fix(빌드 실패 시 pr 종료) : 누락된 권한 추가

--- a/.github/workflows/close_pr_when_build_fail.yml
+++ b/.github/workflows/close_pr_when_build_fail.yml
@@ -10,6 +10,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      pull-requests: write
+      issues: write
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
