feat(빌드 실패 시 코멘트 남기기) : 기능 구현

--- a/.github/workflows/close_pr_when_build_fail.yml
+++ b/.github/workflows/close_pr_when_build_fail.yml
@@ -36,6 +36,13 @@ jobs:
           script: |
             const pull_number = ${{ github.event.pull_request.number }}
             const updated_title = `[BUILD FAIL] ${{ github.event.pull_request.title }}`
+            await github.rest.pulls.createReview({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: pull_number,
+              body: '빌드에 실패했습니다.',
+              event: 'REQUEST_CHANGES'
+            })
             await github.rest.pulls.update({
               owner: context.repo.owner,
               repo: context.repo.repo,
