--- a/.github/workflows/close_pr_when_build_fail.yml
+++ b/.github/workflows/close_pr_when_build_fail.yml
@@ -32,7 +32,7 @@ jobs:
       - name: If build fail
         continue-on-error: true
         # 이전 step이 실패한 경우에만 이 step을 실행시키는 syntax
-        if: ${{ steps.build_and_test.conclusion == 'failure'}}
+        if: ${{ steps.build_and_test.outcome == 'failure'}}
         id: close_pr
         uses: actions/github-script@v6
         with:
@@ -56,7 +56,7 @@ jobs:
             })
       - name: Send Build Fail Message to Discord
         continue-on-error: true
-        if: ${{ steps.build_and_test.conclusion == 'failure'}}
+        if: ${{ steps.build_and_test.outcome == 'failure'}}
         run: |
           curl --location ${{secrets.DISCORD_WEBHOOK_URL}} \
           --header 'Content-Type: application/json' \
