fix : 깃허브 pr 빌드 실패 시 디스코드에 알림 전송하는 스크립트 오류 수정

--- a/.github/workflows/close_pr_when_build_fail.yml
+++ b/.github/workflows/close_pr_when_build_fail.yml
@@ -67,6 +67,6 @@ jobs:
             "title": "${{ github.event.pull_request.title }}",
             "type": "rich",
             "description": "빌드가 실패했습니다.",
-            "url": "${{github.ref}}"
+            "url": "https://github.com/Cafegory/Cafegory_Backend_REST_API/pull/${{github.event.number}}"
           }
           ]}'
