--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -46,64 +46,6 @@ jobs:
           remote_path: ${{ secrets.SSH_REMOTE_PATH }}
           sftp_only: true
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: If build fail
-        continue-on-error: true
-        # 이전 step이 실패한 경우에만 이 step을 실행시키는 syntax
-        if: ${{ steps.build_and_test.outcome == 'failure'}}
-        id: close_pr
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const pull_number = ${{ github.event.pull_request.number }}
-            const updated_title = `[BUILD FAIL] ${{ github.event.pull_request.title }}`
-            await github.rest.pulls.createReview({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pull_number,
-              body: '빌드에 실패했습니다.',
-              event: 'REQUEST_CHANGES'
-            })
-            await github.rest.pulls.update({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pull_number,
-              title: updated_title,
-              state: 'closed'
-            })
-      - name: Send Build Fail Message to Discord
-        continue-on-error: true
-        if: ${{ steps.build_and_test.outcome == 'failure'}}
-        run: |
-          curl --location ${{secrets.DISCORD_WEBHOOK_URL}} \
-          --header 'Content-Type: application/json' \
-          --data '{
-          "avatar_url": "https://cdn-icons-png.flaticon.com/512/25/25231.png",
-          "embeds": [
-          {
-            "title": "${{ github.event.pull_request.title }}",
-            "type": "rich",
-            "description": "빌드가 실패했습니다.",
-            "url": "https://github.com/Cafegory/Cafegory_Backend_REST_API/pull/${{github.event.number}}"
-          }
-          ]}'
-
-      - name: Send Build Success Message to Discord
-        continue-on-error: true
-        if: ${{ steps.build_and_test.outcome == 'success'}}
-        run: |
-          curl --location ${{secrets.DISCORD_WEBHOOK_URL}} \
-          --header 'Content-Type: application/json' \
-          --data '{
-          "avatar_url": "https://cdn-icons-png.flaticon.com/512/25/25231.png",
-          "embeds": [
-          {
-            "title": "${{ github.event.pull_request.title }}",
-            "type": "rich",
-            "description": "빌드가 성공했습니다! 아싸!",
-            "url": "https://github.com/Cafegory/Cafegory_Backend_REST_API/pull/${{github.event.number}}"
-          }
-          ]}'
       - name: Send Deploy Fail Message to Discord
         continue-on-error: true
         if: ${{ steps.deploy_file.outcome == 'failure'}}
@@ -117,7 +59,7 @@ jobs:
             "title": "${{ github.event.pull_request.title }}",
             "type": "rich",
             "description": "배포가 실패했습니다.",
-            "url": "https://github.com/Cafegory/Cafegory_Backend_REST_API/pull/${{github.event.number}}"
+            "url": "https://github.com/Cafegory/Cafegory_Backend_REST_API"
           }
           ]}'
       - name: Send Deploy Success Message to Discord
@@ -133,6 +75,6 @@ jobs:
             "title": "${{ github.event.pull_request.title }}",
             "type": "rich",
             "description": "배포가 성공했습니다!!! 아싸!!!",
-            "url": "https://github.com/Cafegory/Cafegory_Backend_REST_API/pull/${{github.event.number}}"
+            "url": "http://${{ secrets.SSH_HOST }}/"
           }
-          ]}'
+          ]}'제
