fix : 배포 성공 메세지 클릭 url 오타 수정

--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -75,6 +75,6 @@ jobs:
             "title": "배포 성공!!",
             "type": "rich",
             "description": "배포가 성공했습니다!!! 아싸!!!",
-            "url": "${{ secrets.HTTP_API_SERVER_URL}}/"
+            "url": "${{ secrets.HTTP_API_SERVER_URL}}"
           }
           ]}'
