--- a/.github/workflows/run_test_when_pr_update.yml
+++ b/.github/workflows/run_test_when_pr_update.yml
@@ -14,6 +14,8 @@ jobs:
       issues: write
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
