fix : 테스트 실패 시 코멘트 남기는 스크립트 권한 오류 수정

--- a/.github/workflows/run_test_when_pr_update.yml
+++ b/.github/workflows/run_test_when_pr_update.yml
@@ -78,4 +78,4 @@ jobs:
         if: always()
         with:
           report_paths: '**/build/test-results/test/TEST-*.xml'
-          token: ${{ github.token }}
+          token: ${{ secrets.GITHUB_TOKEN }}
