--- a/.github/workflows/run_test_when_pr_update.yml
+++ b/.github/workflows/run_test_when_pr_update.yml
@@ -8,6 +8,7 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     permissions:
+      checks: write
       contents: read
       packages: write
       pull-requests: write
