--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
     // jpa json 타입
     implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.5.2'
+
+    //spring boot starter mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
