--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,6 +12,19 @@ spring:
     properties:
       hibernate:
         format_sql: true #이쁘게 해줌
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: test-cafegory@gmail.com
+    password: test cafe gory pass
+
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 logging:
   level:
     org.hibernate.SQL: trace #콘솔에 남기는게 아니라 로그로 남음.
@@ -30,6 +43,8 @@ oauth:
       auth: https://nid.naver.com
       api: https://openapi.naver.com
 
-
 jwt:
   secret: 01234567890123456789012345678901234567890123456789
+
+mail:
+  from: cafegory@gmail.com
