chore: 임시로 gitignore 수정 및 설정파일 업로드

--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,10 @@ out/
 .vscode/
 
 ###security###
-application-dev.yml
-application-pub.yml
-application-local.yml
-application-*.yml
-application_log
+#application-dev.yml
+#application-pub.yml
+#application-local.yml
+#application-*.yml
+#application_log
 *.gz
 !**/src/test/resources/application-test.yml
