--- a/build.gradle
+++ b/build.gradle
@@ -100,3 +100,13 @@ compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
 }
 //querydsl 추가 끝
+
+//서브모듈 시작
+processResources.dependsOn('copySecret')
+
+tasks.register('copySecret', Copy) {
+    from './Cafegory_Backend_Settings'
+    include 'application*.yml', 'logback-spring.xml'  // 복사할 파일들
+    into 'src/main/resources'  // 복사 위치
+}
+//서브모듈 끝
