chore: gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,6 @@ out/
 .vscode/
 
 ###security###
-#application-dev.yml
-#application-pub.yml
-#application-local.yml
-#application-*.yml
-#application_log
+/src/main/resources/
 *.gz
 !**/src/test/resources/application-test.yml
