--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,11 +1,11 @@
 server:
   port: 8080
 spring:
-  datasource: #연결할 디비의 이름
-    driver-class-name: org.mariadb.jdbc.Driver #디비 종류
-    url: jdbc:mariadb://localhost:3306/cafegory_test
-    username: cafegory_test
-    password: 1234
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:5432/test
+    username: test
+    password: test
   jpa: #jpa 종류
     hibernate:
       ddl-auto: create
