--- a/build.gradle
+++ b/build.gradle
@@ -69,10 +69,23 @@ tasks.named('test') {
 //서브모듈 시작
 processResources.dependsOn('copySecret')
 
-tasks.register('copySecret', Copy) {
-    from "./Cafegory_Backend_Settings/main"
-    include 'application*.yml', 'logback-spring.xml'  // 복사할 파일들
+tasks.register('copyMainSecret', Copy) {
+    from("./Cafegory_Backend_Settings/main") {
+        include 'application*.yml', 'logback-spring.xml'  // 복사할 파일들
+    }
     into "./src/main/resources"  // 복사 위치
+}
+
+tasks.register('copyTestSecret', Copy) {
+    from("./Cafegory_Backend_Settings/test") {
+        include 'application*.yml'  // 복사할 파일들
+    }
+    into "./src/test/resources"  // 복사 위치
+}
+
+// 두 작업을 하나의 작업으로 묶어서 실행할 수 있도록 설정
+tasks.register('copySecret') {
+    dependsOn 'copyMainSecret', 'copyTestSecret'
 }
 //서브모듈 끝
 
