chore: build.gradle 수정

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ tasks.named('test') {
 }
 
 //서브모듈 시작
+tasks.named('processTestResources') {
+    dependsOn 'copyTestSecret'
+}
+
 processResources.dependsOn('copySecret')
 
 tasks.register('copyMainSecret', Copy) {
