--- a/.github/workflows/cafegory-backend-dev-cd.yml
+++ b/.github/workflows/cafegory-backend-dev-cd.yml
@@ -2,7 +2,7 @@ name: Cafegory-Backend-Dev-CD
 
 env:
   PROFILE: dev
-  DOCKER_HUB_REPOSITORY: cafegory_backend_dev
+  DOCKER_HUB_REPOSITORY: cafegory2/cafegory_backend_dev
 
 on:
   workflow_dispatch:
@@ -31,7 +31,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Jar 파일 빌드
-        run: ./gradlew bootJar
+        run: ./gradlew bootJa r
 
       - name: DockerHub에 로그인
         uses: docker/login-action@v2
