--- a/.github/workflows/cafegory-backend-dev-cd.yml
+++ b/.github/workflows/cafegory-backend-dev-cd.yml
@@ -45,7 +45,7 @@ jobs:
           context: ./
           file: ./docker/Dockerfile-dev
           push: true
-          platforms: linux/arm64
+          platforms: linux/amd64
           tags: ${{ env.DOCKER_HUB_REPOSITORY }}:latest
 
   backend-docker-pull-and-run:
