--- a/.github/workflows/cafegory-backend-dev-cd.yml
+++ b/.github/workflows/cafegory-backend-dev-cd.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Gradlew 권한 설정
         run: chmod +x ./gradlew
 
+      - name: 테스트 실행
+        run: ./gradlew test
+
       - name: Jar 파일 빌드
         run: ./gradlew bootJa r
 
