--- a/.github/workflows/cafegory-backend-dev-cd.yml
+++ b/.github/workflows/cafegory-backend-dev-cd.yml
@@ -35,7 +35,7 @@ jobs:
         run: ./gradlew test
 
       - name: Jar 파일 빌드
-        run: ./gradlew bootJar
+        run: ./gradlew bootJar --args='--spring.profiles.active=develop'
 
       - name: DockerHub에 로그인
         uses: docker/login-action@v2
