--- a/build.gradle
+++ b/build.gradle
@@ -78,8 +78,10 @@ dependencies {
 }
 
 openapi3 {
-    setServer("http://localhost:8080")
-    setServer("http://43.200.133.96:8080")
+    servers = [
+            { url = 'http://localhost:8080' },
+            { url = 'http://43.200.133.96:8080' }
+    ]
     title = "Cafegory Server API"
     description = "Cafegory Server API for client"
     version = "0.0.1"
