--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,10 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
 
     //JWT
-    implementation 'io.jsonwebtoken:jjwt:0.12.4'
+//    implementation 'io.jsonwebtoken:jjwt:0.12.4'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
     implementation 'com.h2database:h2'
 
