--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     // test container
     testImplementation "org.testcontainers:testcontainers:1.20.0"
     testImplementation "org.testcontainers:junit-jupiter:1.20.0"
-    testImplementation "org.testcontainers:mariadb:1.20.0"
+    testImplementation "org.testcontainers:postgresql:1.20.1"
 
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'com.epages:restdocs-api-spec-mockmvc:' + restdocsApiSpecVersion
