--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,8 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
+
     // test container
     testImplementation "org.testcontainers:testcontainers:1.20.0"
     testImplementation "org.testcontainers:junit-jupiter:1.20.0"
