--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
     testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // test container
     testImplementation "org.testcontainers:testcontainers:1.20.0"
