--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:5.2.0'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    testImplementation('io.rest-assured:rest-assured:4.5.1')
+    testImplementation('io.rest-assured:json-path:4.5.1')
+    testImplementation('io.rest-assured:xml-path:4.5.1')
+
     // test container
     testImplementation "org.testcontainers:testcontainers:1.20.0"
     testImplementation "org.testcontainers:junit-jupiter:1.20.0"
