--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,9 @@ dependencies {
 
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'com.epages:restdocs-api-spec-mockmvc:' + restdocsApiSpecVersion
+
+    testImplementation 'com.epages:restdocs-api-spec-restassured:' + restdocsApiSpecVersion
+    testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
     swaggerUI 'org.webjars:swagger-ui:5.17.14'
 
 }
